git commit test

--- a/.gitignore
+++ b/.gitignore
@@ -27,5 +27,6 @@
 ### reduce size ###
 target/
 .mvn/wrapper/
+.mvn/wrapper/*
 .mvn/wrapper/maven-wrapper.jar
 .mvn/wrapper/maven-wrapper.properties
