--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 # Enabling H2 Console
 spring.h2.console.enabled=true
+# Disable db table auto creation, use schema.sql instead
+spring.jpa.hibernate.ddl-auto=none
+# Always init data from sql. This is useful when switch from h2(embedded) to other db
+spring.datasource.initialization-mode=always
