+controller +User entity +init data +schema -unnecessary java files

--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>findmydoctor</name>
-	<description>App to match doctors with people who has rare diseases</description>
+	<name>FindMyDoctor</name>
+	<description>App that matches doctors with people who has rare diseases</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -46,6 +46,11 @@
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
     </dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 
 	</dependencies>
 
