--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=none
 # Always init data from sql. This is useful when switch from h2(embedded) to other db
 spring.datasource.initialization-mode=always
+# indicate the jsp location
+spring.mvc.view.prefix=/WEB-INF/jsp/
+# indicate which files to look for
+spring.mvc.view.suffix=.jsp
