--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.datasource.initialization-mode=always
 spring.mvc.view.prefix=/WEB-INF/jsp/
 # indicate which files to look for
 spring.mvc.view.suffix=.jsp
+
+#spring boot mongodb
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=springboot-mongo
