--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Enabling H2 Console
 #spring.h2.console.enabled=true
-# Disable db table auto creation, use schema.sql instead
+# Disable db table auto creation, use 1schema.sql instead
 #spring.jpa.hibernate.ddl-auto=none
 # Always init data from sql. This is useful when switch from h2(embedded) to other db
 #spring.datasource.initialization-mode=always
@@ -9,9 +9,14 @@ spring.mvc.view.prefix=/WEB-INF/jsp/
 # indicate which files to look for
 spring.mvc.view.suffix=.jsp
 
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #spring boot mongodb
 #spring.data.mongodb.host=localhost
 #spring.data.mongodb.port=27017
 #spring.data.mongodb.database=springboot-mongo
+
+#spring boot mongodb
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=0
+spring.data.mongodb.database=springboot-mongo
