add logging support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,6 @@ spring.mvc.view.suffix=.jsp
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=0
 spring.data.mongodb.database=springboot-mongo
+
+logging.level.org.springframework.boot.autoconfigure.mongo.embedded=off
+logging.level.org.mongodb=off
