add test controller for spring security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,5 @@ spring.data.mongodb.database=springboot-mongo
 
 logging.level.org.springframework.boot.autoconfigure.mongo.embedded=off
 logging.level.org.mongodb=off
+
+server.port=7000
