--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,5 +23,8 @@ spring.data.mongodb.database=springboot-mongo
 
 logging.level.org.springframework.boot.autoconfigure.mongo.embedded=off
 logging.level.org.mongodb=off
-
+# tomcat web app port
 server.port=7000
+# default login username and password
+spring.security.user.name=user@gmail.com
+spring.security.user.password=password
