add spring boot profile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,6 @@ server.port=7000
 # default login username and password
 spring.security.user.name=user@gmail.com
 spring.security.user.password=password
+
+#spring boot profile
+spring.profiles.active=dev  
